--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <body>
         <!-- Grid Layout is used for container -->
         <div class="container">
-            <div class="header box">// Header comes here. Semantic element &lt;header&gt; should be used. Header should also have a page title.</div>
+            <div class="header box">
+                <header>One Step For Tomorrow</header>
+            </div>
             <div class="sidebar box">// sidebar comes here. Sidebar should have a semantic &lt;nav&gt; element.</div>
             <div class="content box">// content comes here. Content should list post according to the decendent posted date.</div>
             <div class="footer box">// footer comes here. Footer should provide several informations such as copyrights or sns links.</div>
