nav should have links to recent posts and categories

--- a/index.html
+++ b/index.html
@@ -9,9 +9,24 @@
         <!-- Grid Layout is used for container -->
         <div class="container">
             <div class="header box">
-                <header>One Step For Tomorrow</header>
+                <header>
+                    <h1>One Step For Tomorrow</h1>
+                </header>
             </div>
-            <div class="sidebar box">// sidebar comes here. Sidebar should have a semantic &lt;nav&gt; element.</div>
+            <div class="sidebar box">
+                <nav>
+                    <h2>Recent Posts</h2>
+                    <ol>
+                        <li><a href="#">Learning front end web developing</a></li>
+                        <li><a href="#">Server setup</a></li>
+                        <li><a href="#">Ubuntu installation</a></li>
+                    </ol>
+                    <h2>Categories</h2>
+                    <ol>
+                        <li><a href="#">Uncategorized</a></li>
+                    </ol>
+                </nav>
+            </div>
             <div class="content box">// content comes here. Content should list post according to the decendent posted date.</div>
             <div class="footer box">// footer comes here. Footer should provide several informations such as copyrights or sns links.</div>
         </div>
