footer should have copyright and links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,15 @@
                     </article>
                 </section>
             </div>
-            <div class="footer box">// footer comes here. Footer should provide several informations such as copyrights or sns links.</div>
+            <div class="footer box">
+                <div class="follow">
+                    <p>Follow me:</p>
+                    <a href="#"><img src="images/twitter.png" alt="twitter icon" /></a>
+                    <a href="#"><img src="images/facebook.png" alt="twitter icon" /></a>
+                    <a href="#"><img src="images/linkedIn.png" alt="twitter icon" /></a>
+                </div>
+                <p>&copy;Tanada Daisuke 2021</p>
+            </div>
         </div>
     </body>
 </html>
