--- a/post003.html
+++ b/post003.html
@@ -21,7 +21,7 @@
                     <section class="author-info">
                         <p>NAME: Tanada Daisuke</p>
                         <p>CORP: Web Engineer @ Noradai corp.</p>
-                        <p>The work of web creating is really fun! I'm now learning more skills to make creative web site. My favorate activity is taking nature photos, and I want to show you a lot through this blog series.</p>
+                        <p>The work of web creating is really fun! I'm now learning <em>frontend</em> skills to make creative web site. My favorate activity is taking nature photos, and I want to show you a lot through this blog series.</p>
                     </section>
                 </div>
             </section>
