social share is requested

--- a/post003.html
+++ b/post003.html
@@ -47,7 +47,7 @@
             </section>
             <section class="footer box">
                 <div class="follow">
-                    <p>Follow me:</p>
+                    <p>Share in SNS:</p>
                     <div class="snsContainer">
                         <div class="snsBox" id="twitter">
                             <a href="#"></a>
