intentional user flow is requested

--- a/post003.html
+++ b/post003.html
@@ -60,6 +60,7 @@
                         </div>
                     </div>
                 </div>
+                <p class="homelink">Back to <a href="index.html">HOME</a></p>
                 <p class="copyright">&copy;Tanada Daisuke 2021</p>
             </section>
         </div>
