button is requested

--- a/post001.html
+++ b/post001.html
@@ -36,6 +36,9 @@
                         <img src="images/camellia.jpg" alt="camellia" />
                         <figcaption>Camellia flower in winter season.</figcaption>
                     </figure>
+                    <form action="" method="post" class="subscribe">
+                        <input type="submit" value="Subscribe" class="submit" />
+                    </form>
                 </article>                
             </section>
             <section class="footer box">
