--- a/post002.html
+++ b/post002.html
@@ -36,6 +36,9 @@
                         <img src="images/cherry-blossom.jpg" alt="cherry blossom" />
                         <figcaption>Cherry blossom lets us know that spring comes.</figcaption>
                     </figure>
+                    <form action="" method="post" class="subscribe">
+                        <input type="submit" value="Subscribe" class="submit" />
+                    </form>
                 </article>
             </section>
             <section class="footer box">
